web view for user trigger history
